WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96869
REGRESSION (
r125578
): The monospace code path in RenderText::widthFromCache disagrees with Font::width on word spacing
https://bugs.webkit.org/show_bug.cgi?id=96869
Summary
REGRESSION (r125578): The monospace code path in RenderText::widthFromCache d...
mitz
Reported
2012-09-15 14:52:39 PDT
REGRESSION (
r125578
): The monospace code path in RenderText::widthFromCache disagrees with Font::width on word spacing
Attachments
Update word-spacing logic in RenderText::widthFromCache
(189.77 KB, patch)
2012-09-15 14:59 PDT
,
mitz
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-09-15 14:59:28 PDT
Created
attachment 164295
[details]
Update word-spacing logic in RenderText::widthFromCache
Eric Seidel (no email)
Comment 2
2012-09-15 15:03:30 PDT
Comment on
attachment 164295
[details]
Update word-spacing logic in RenderText::widthFromCache LGTM. Very difficult to read these pixel changes. :(
mitz
Comment 3
2012-09-15 15:25:58 PDT
Fixed in <
http://trac.webkit.org/r128693
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug