REGRESSION (r125578): The monospace code path in RenderText::widthFromCache disagrees with Font::width on word spacing https://bugs.webkit.org/show_bug.cgi?id=96869

Reviewed by Eric Seidel.

Source/WebCore:

Test: fast/text/word-space-monospace.html
This also fixes fast/css/word-spacing-characters.html

* rendering/RenderText.cpp:
(WebCore::RenderText::widthFromCache): Made the conditions for adding word spacing match the
ones in WidthIterator.

LayoutTests:

* fast/text/word-space-monospace-expected.html: Added.
* fast/text/word-space-monospace.html: Added.
* platform/mac/TestExpectations: Removed fast/css/word-spacing-characters.html.
* platform/mac/fast/css/word-space-extra-expected.png: Updated.
* platform/mac/fast/css/word-space-extra-expected.txt: Updated.



Canonical link: https://commits.webkit.org/114779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128693 268f45cc-cd09-0410-ab3c-d52691b4dbfc